# csv_download

./: .gitignore  LICENSE  README.md  README_JP.md  pyproject.toml
example/: example.csv
src/csv_download/: main.py
tests/: test_csv_download.py
